--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
-APP_URL=http://localhost:3333
-NODE_ENV=development
+APP_URL=
+NODE_ENV=
 
 # Auth
 
@@ -11,4 +11,21 @@ DB_HOST=
 DB_USER=
 DB_PASS=
 DB_NAME=
+
+# Mongo
+MONGO_URL=
+# Redis
+REDIS_HOST=
+REDIS_PORT=
+
+# Mail
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
+
+# Sentry
+# somente em produção add SENTRY_DNS
+SENTRY_DNS =
+
 
